# My-opencv-project

./: CMakeLists.txt  Main.cpp  Main.gxx  README.md  bash.zsh  build.mk  main.cc  makefile  pkg-config.cc
actions/: inddx.md
docs/: README.md  index.html  installation.md
public/: _page.md  _page.mdx
script.au3/: Bash.Zsh
src/: detector.hpp  detector.py  main.hpp  main_script.au3
tests/: test_detector.py  test_main.cpp
workshop/: build.mk  config.CMake
